# bookstore

./: pyproject.toml
bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
